--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <p class="subtitle">Profile</p>
                         <div class="swiper about-us__swiper">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide slide-first" data-slide="slide-1">
+                                <div class="swiper-slide slide-first" id="about-us">
                                     <h2 class="slide__title">About Us</h2>
                                     <p class="slide__info">CYou are using the old write up. We are using this now.
                                         Crafty Metaverse is a multi-blockchain based virtual reality metaverse platform
@@ -69,7 +69,7 @@
                                         and persistent 3D virtual metaverse gaming platform especially for crypto
                                         enthusiasts, gamers, artists, and metaverse fans. .</p>
                                 </div>
-                                <div class="swiper-slide slede-second" data-slide="slide-2">
+                                <div class="swiper-slide slede-second" id="white-paper">
                                     <h2 class="slide__title">White paper</h2>
                                     <p class="slide__info">All Crypto Whitepapers is a decentralized blockchain
                                         hyperledger protocol with subzero finality, peer to peer proof of work and
@@ -77,7 +77,7 @@
                                         the right place! Through our Articles, News and our list of Crypto definitions,
                                         we give you all the knowledge you need to do your own crypto research. </p>
                                 </div>
-                                <div class="swiper-slide slide-third" data-slide="slide-3">
+                                <div class="swiper-slide slide-third" id="tokenomics">
                                     <h2 class="slide__title">Tokenomics</h2>
                                     <p class="slide__info">Tokenomics is the understanding of the supply and demand
                                         characteristics of a cryptocurrency. In traditional economics, economists track
