--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                 </div>
             </section>
             <section class="about-us">
+                <div class="about-us__img">
+                    <img src="img/about-us-bg.jpg">
+                </div>
                 <div class="container">
                     <div class="about-us__content">
                         <p class="subtitle">Profile</p>
