--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 <div class="about-us__img">
                     <img src="img/about-us-bg.jpg">
                 </div>
+                <div class="about-us__bg"></div>
                 <div class="container">
                     <div class="about-us__content">
                         <p class="subtitle">Profile</p>
@@ -74,11 +75,12 @@
                                 </div>
                                 <div class="swiper-slide slede-second" id="white-paper">
                                     <h2 class="slide__title">White paper</h2>
-                                    <p class="slide__info">All Crypto Whitepapers is a decentralized blockchain
-                                        hyperledger protocol with subzero finality, peer to peer proof of work and
-                                        double spending hash rate. If you have no idea what this means, you’ve come to
-                                        the right place! Through our Articles, News and our list of Crypto definitions,
-                                        we give you all the knowledge you need to do your own crypto research. </p>
+                                    <p class="slide__info">The purpose of a white paper is to promote a specific
+                                        product, service, technology or methodology, as well as influence the decisions
+                                        of current and potential clients or investors. While brochures and other
+                                        marketing materials can be flashy and include obvious sales pitches, a white
+                                        paper is intended to provide compelling and factual/technical evidence that a
+                                        particular offering is a superior method of solving a problem or challenge.</p>
                                 </div>
                                 <div class="swiper-slide slide-third" id="tokenomics">
                                     <h2 class="slide__title">Tokenomics</h2>
@@ -91,7 +93,7 @@
                             </div>
                             <div class="swiper-scrollbar"></div>
                             <div class="swiper-pagination"></div>
-                            
+
                         </div>
                     </div>
                 </div>
