fix burger + roadmap points + more

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <div class="header__logo">
                         <img src="img/logo.svg">
                     </div>
-                    <nav class="header__menu">
+                    <nav class="header__menu menu">
                         <ul class="menu__list">
                             <li class="menu__item"><a href="#home">Home</a></li>
                             <li class="menu__item"><a href="#about-us">About Us</a></li>
@@ -39,7 +39,7 @@
             <section class="home" id="home">
                 <div class="container">
                     <div class="home__content">
-                        <p class="home__subtitle subtitle">Crafty Metaverse</p>
+                        <h3 class="home__subtitle subtitle">Crafty Metaverse</h3>
                         <h1 class="home__title">A SHARED, IMMERSIVE MULTI-BLOCKCHAIN BASED
                             <span><svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 46 46"
                                     fill="none">
@@ -53,18 +53,18 @@
                     </div>
                 </div>
             </section>
-            <section class="about-us">
+            <section class="about-us" id="about-us">
                 <div class="about-us__img">
                     <img src="img/about-us-bg.jpg">
                 </div>
                 <div class="about-us__bg"></div>
                 <div class="container">
                     <div class="about-us__content">
-                        <p class="subtitle">Profile</p>
+                        <h3 class="about-us__subtitle subtitle">Profile</h3>
+                        <h2 class="about-us__title title">About Us</h2>
                         <div class="swiper about-us__swiper">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide slide-first" id="about-us">
-                                    <h2 class="slide__title">About Us</h2>
+                                <div class="swiper-slide slide-first">
                                     <p class="slide__info">CYou are using the old write up. We are using this now.
                                         Crafty Metaverse is a multi-blockchain based virtual reality metaverse platform
                                         to develop the most immersive, imaginative, and addictive gaming experiences. We
@@ -73,27 +73,125 @@
                                         and persistent 3D virtual metaverse gaming platform especially for crypto
                                         enthusiasts, gamers, artists, and metaverse fans. .</p>
                                 </div>
-                                <div class="swiper-slide slede-second" id="white-paper">
-                                    <h2 class="slide__title">White paper</h2>
-                                    <p class="slide__info">The purpose of a white paper is to promote a specific
-                                        product, service, technology or methodology, as well as influence the decisions
-                                        of current and potential clients or investors. While brochures and other
-                                        marketing materials can be flashy and include obvious sales pitches, a white
-                                        paper is intended to provide compelling and factual/technical evidence that a
-                                        particular offering is a superior method of solving a problem or challenge.</p>
-                                </div>
-                                <div class="swiper-slide slide-third" id="tokenomics">
-                                    <h2 class="slide__title">Tokenomics</h2>
-                                    <p class="slide__info">Tokenomics is the understanding of the supply and demand
-                                        characteristics of a cryptocurrency. In traditional economics, economists track
-                                        currency output using official data on the money supply. The numbers they report
-                                        are usually called M1, M2, and in some countries also M3 or M4. These figures
-                                        help ensure transparency in monitoring various aspects of currency supply.</p>
+                                <div class="swiper-slide slede-second">
+                                    <p class="slide__info">C#2You are using the old write up. We are using this now.
+                                        Crafty Metaverse is a multi-blockchain based virtual reality metaverse platform
+                                        to develop the most immersive, imaginative, and addictive gaming experiences. We
+                                        are providing our gaming community with the near-real-world experience while
+                                        using their digital avatars. Our ecosystem will be a futuristic, decentralized,
+                                        and persistent 3D virtual metaverse gaming platform especially for crypto
+                                        enthusiasts, gamers, artists, and metaverse fans. .</p>
                                 </div>
                             </div>
                             <div class="swiper-scrollbar"></div>
                             <div class="swiper-pagination"></div>
-
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="road-map">
+                <div class="container">
+                    <div class="road-map-content">
+                        <div class="road-map__head">
+                            <h3 class="road-map__subtitle subtitle">Our Way</h3>
+                            <h2 class="road-map__title title">Roadmap</h2>
+                        </div>
+                        <div class="road-map__points">
+                            <div class="road-map__point left first">
+                                <div class="point-text">
+                                    <div class="point-text__title">
+                                        <h4>Q1 <br>Governance Token <br>Launch on BSC ($CMETA)</h4>
+                                    </div>
+                                    <div class="point-text__list">
+                                        <ul>
+                                            <li>Launch Date: Jan 8th, 2022 Contract Audit</li>
+                                            <li>TechAudit Completed on Jan 21st, 2022<br>5k Telegram members</li>
+                                            <li>32k Telegram Members.  CG and CMC listings</li>
+                                            <li>Application Sent CEX Listings</li>
+                                            <li>CoinsBit Listing – Feb 8th . Website Revamp</li>
+                                            <li>Contracted UI/UX Developers</li>
+                                        </ul>
+                                    </div>
+                                    <div class="point-text__more" data-more="more-1">
+                                        <p class="more">More</p>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="15" height="9" viewBox="0 0 15 9" fill="none">
+                                            <path d="M1 1L7.5 7L14 1" stroke="white" stroke-width="2"/>
+                                          </svg>
+                                    </div>
+                                    <div class="point-text__list accordion__more" id="more-1">
+                                        <ul>
+                                            <li>Launch Date: Jan 8th, 2022 Contract Audit</li>
+                                            <li>32k Telegram Members.  CG and CMC listings</li>
+                                            <li>CoinsBit Listing – Feb 8th . Website Revamp</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="point purple">
+                                    <div class="point__center"></div>
+                                    <div class="point__first"></div>
+                                    <div class="point__second"></div>
+                                    <div class="point__third"></div>
+                                </div>
+                            </div>
+                            <div class="road-map__point right second">
+                                <div class="point pink">
+                                    <div class="point__center"></div>
+                                    <div class="point__first"></div>
+                                    <div class="point__second"></div>
+                                    <div class="point__third"></div>
+                                </div>  
+                                <div class="point-text">
+                                    <div class="point-text__title">
+                                        <h4>Q2 <br>CMETA Ecosystem Begins</h4>
+                                    </div>
+                                    <div class="point-text__list">
+                                        <ul>
+                                            <li>CMETA Staking Release</li>
+                                            <li>SANKOFA Sidechain DEV Starts ($KOFA)<br>
+                                                <span>·</span> CEX Listings and Marketing <br>
+                                                <span>·</span> Governance Token Launch on SOL ($CMETA)</li>
+                                            <li>Bridge BSC, ETH Smart Contracts to Solana Contract<br>
+                                                <span>·</span> Social Media Marketing Pushü</li>
+                                            <li>10K Telegram Members</li>
+                                            <li>10K Twitter Followers</li>
+                                        </ul>
+                                    </div>
+                                    <div class="point-text__more" data-more="more-2">
+                                        <p class="more">More</p>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="15" height="9" viewBox="0 0 15 9" fill="none">
+                                            <path d="M1 1L7.5 7L14 1" stroke="white" stroke-width="2"/>
+                                          </svg>
+                                    </div>
+                                    <div class="point-text__list accordion__more" id="more-2">
+                                        <ul>
+                                            <li>CMETA Staking Release</li>
+                                            <li>SANKOFA Sidechain DEV Starts ($KOFA)<br>
+                                                <span>·</span> CEX Listings and Marketing <br>
+                                                <span>·</span> Governance Token Launch on SOL ($CMETA)</li>
+                                            <li>Bridge BSC, ETH Smart Contracts to Solana Contract<br>
+                                                <span>·</span> Social Media Marketing Pushü</li>
+                                            <li>10K Telegram Members</li>
+                                            <li>10K Twitter Followers</li>
+                                        </ul>
+                                    </div>
+                                </div>   
+                            </div>
+                            <div class="road-map__point left third">
+                                <div class="point green">
+                                    <div class="point__center"></div>
+                                    <div class="point__first"></div>
+                                    <div class="point__second"></div>
+                                    <div class="point__third"></div>
+                                </div>     
+                            </div>
+                            <div class="road-map__point right fourth">
+                                <div class="point blue">
+                                    <div class="point__center"></div>
+                                    <div class="point__first"></div>
+                                    <div class="point__second"></div>
+                                    <div class="point__third"></div>
+                                </div>     
+                            </div>
                         </div>
                     </div>
                 </div>
