--- a/index.html
+++ b/index.html
@@ -227,12 +227,63 @@
                                                 <span>·</span> CEX Listings & Marketing<br>
                                                 <span>·</span> Virtual Arts Studio Introduced<br>
                                                 <span>·</span> Mobile Beta Gameplay Revealed<br>
-                                                <span>·</span> CMETA DEX Introduced: FORGE</li>
+                                                <span>·</span> CMETA DEX Introduced: FORGE
+                                            </li>
                                             <li>Multi-Network Implementation<br>
                                                 <span>·</span> VR Game Dev Begins
                                             </li>
                                         </ul>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="our-brands">
+                <div class="container">
+                    <div class="our-brands__content">
+                        <div class="our-brands__head">
+                            <h3 class="our-brands__subtitle subtitle">No problem</h3>
+                            <h2 class="our-brands__title title">Our brands</h2>
+                        </div>
+                        <div class="our-brands__cards">
+                            <div class="card">
+                                <div class="card__img">
+                                    <img src="img/brands-1.png" alt="">
+                                </div>
+                                <div class="card__info first">
+                                    <h4 class="card__name">Guardians of Lost Worlds<br>(P2E Game)</h4>
+                                    <p class="card__about">Crafty Metaverse will soon launch Guardians of Lost Worlds,
+                                        the first cross-chain P2E gaming experience. Our game will be available on
+                                        multiple blockchains and then eventually on our side chain (SANKOFA). This will
+                                        give users a seamless gameplay experience with little to no gas fees that allow
+                                        users to focus on the game rather than worrying about losing their returns.</p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card__img">
+                                    <img src="img/brands-2.png" alt="">
+                                </div>
+                                <div class="card__info second">
+                                    <h4 class="card__name">Crafty Metaverse <br>Ecosystem</h4>
+                                    <p class="card__about">Crafty Metaverse presents a Virtual Arts Studio where you can
+                                        enhance your creativity by creating digital arts inspired by your game. A
+                                        virtual marketplace to allow the users to trade and stake our $CMETA token and
+                                        their NFTs. Negotiate with the digital avatars of other users to sell your NFTs
+                                        at the best prices and generate passive income while playing</p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card__img">
+                                    <img src="img/brands-3.png" alt="">
+                                </div>
+                                <div class="card__info third">
+                                    <h4 class="card__name">SANKOFA</h4>
+                                    <p class="card__about">SANKOFA($KOFA) is an Ethereum sidechain that will be created
+                                        with Guardians of Lost Worlds community in mind. LYQUID, the team behind
+                                        Guardians of Lost Worlds, will build a reliable, fast and cheap network that
+                                        could cater to the demands of the game.</p>
                                 </div>
                             </div>
                         </div>
