--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
                 </div>
             </section>
             <section class="our-brands">
+                <div class="our-brands__lines"></div>
                 <div class="container">
                     <div class="our-brands__content">
                         <div class="our-brands__head">
@@ -248,43 +249,140 @@
                             <h2 class="our-brands__title title">Our brands</h2>
                         </div>
                         <div class="our-brands__cards">
-                            <div class="card">
-                                <div class="card__img">
-                                    <img src="img/brands-1.png" alt="">
+                            <div class="card first">
+                                <div class="card__content">
+                                    <div class="card__img">
+                                        <img src="img/brands-1.png" alt="">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46"
+                                            viewBox="0 0 46 46" fill="none">
+                                            <path
+                                                d="M23 0L26.2527 19.7473L46 23L26.2527 26.2527L23 46L19.7473 26.2527L0 23L19.7473 19.7473L23 0Z"
+                                                fill="white" />
+                                        </svg>
+                                    </div>
+                                    <div class="card__info">
+                                        <h4 class="card__name">Guardians of Lost Worlds<br>(P2E Game)</h4>
+                                        <p class="card__about">Crafty Metaverse will soon launch Guardians of Lost
+                                            Worlds,
+                                            the first cross-chain P2E gaming experience. Our game will be available on
+                                            multiple blockchains and then eventually on our side chain (SANKOFA). This
+                                            will
+                                            give users a seamless gameplay experience with little to no gas fees that
+                                            allow
+                                            users to focus on the game rather than worrying about losing their returns.
+                                        </p>
+                                    </div>
                                 </div>
-                                <div class="card__info first">
-                                    <h4 class="card__name">Guardians of Lost Worlds<br>(P2E Game)</h4>
-                                    <p class="card__about">Crafty Metaverse will soon launch Guardians of Lost Worlds,
-                                        the first cross-chain P2E gaming experience. Our game will be available on
-                                        multiple blockchains and then eventually on our side chain (SANKOFA). This will
-                                        give users a seamless gameplay experience with little to no gas fees that allow
-                                        users to focus on the game rather than worrying about losing their returns.</p>
-                                </div>
+                                <div class="card__blur"></div>
                             </div>
-                            <div class="card">
-                                <div class="card__img">
-                                    <img src="img/brands-2.png" alt="">
+                            <div class="card second">
+                                <div class="card__content">
+                                    <div class="card__img">
+                                        <img src="img/brands-2.png" alt="">
+                                    </div>
+                                    <div class="card__info">
+                                        <h4 class="card__name">Crafty Metaverse <br>Ecosystem</h4>
+                                        <p class="card__about">Crafty Metaverse presents a Virtual Arts Studio where you
+                                            can
+                                            enhance your creativity by creating digital arts inspired by your game. A
+                                            virtual marketplace to allow the users to trade and stake our $CMETA token
+                                            and
+                                            their NFTs. Negotiate with the digital avatars of other users to sell your
+                                            NFTs
+                                            at the best prices and generate passive income while playing</p>
+                                    </div>
                                 </div>
-                                <div class="card__info second">
-                                    <h4 class="card__name">Crafty Metaverse <br>Ecosystem</h4>
-                                    <p class="card__about">Crafty Metaverse presents a Virtual Arts Studio where you can
-                                        enhance your creativity by creating digital arts inspired by your game. A
-                                        virtual marketplace to allow the users to trade and stake our $CMETA token and
-                                        their NFTs. Negotiate with the digital avatars of other users to sell your NFTs
-                                        at the best prices and generate passive income while playing</p>
-                                </div>
+                                <div class="card__blur"></div>
                             </div>
-                            <div class="card">
-                                <div class="card__img">
-                                    <img src="img/brands-3.png" alt="">
+                            <div class="card third">
+                                <div class="card__content">
+                                    <div class="card__img">
+                                        <img src="img/brands-3.png" alt="">
+                                    </div>
+                                    <div class="card__info">
+                                        <h4 class="card__name">SANKOFA</h4>
+                                        <p class="card__about">SANKOFA($KOFA) is an Ethereum sidechain that will be
+                                            created
+                                            with Guardians of Lost Worlds community in mind. LYQUID, the team behind
+                                            Guardians of Lost Worlds, will build a reliable, fast and cheap network that
+                                            could cater to the demands of the game.</p>
+                                    </div>
                                 </div>
-                                <div class="card__info third">
-                                    <h4 class="card__name">SANKOFA</h4>
-                                    <p class="card__about">SANKOFA($KOFA) is an Ethereum sidechain that will be created
-                                        with Guardians of Lost Worlds community in mind. LYQUID, the team behind
-                                        Guardians of Lost Worlds, will build a reliable, fast and cheap network that
-                                        could cater to the demands of the game.</p>
+                                <div class="card__blur"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="our-resources">
+                <div class="container">
+                    <div class="our-resources__content">
+                        <div class="our-resources__head">
+                            <h3 class="our-resources__subtitle subtitle">What we do</h3>
+                            <h2 class="our-resources__title title">Our resources</h2>
+                        </div>
+                        <div class="our-resources__info">
+                            <div class="info">
+                                <div class="info__logo">
+                                    <img src="img/logo-2.svg" alt="">
                                 </div>
+                                <h4 class="info__title">About toKen $Cmeta</h4>
+                                <p class="info__about">CMETA, a BSC-based cryptocurrency token will be the sole
+                                    governance token on
+                                    the platform. This means that every single transaction in the Crafty Metaverse space
+                                    will be conducted with the $CMETA token</p>
+                                <button class="info__btn">Play (Coming Soon)</button>
+                            </div>
+                            <div class="points-resources">
+                                <div class="point-resources purple">
+                                    <div class="point-resources__point">
+                                        <div class="point-resources__point_center"></div>
+                                        <div class="point-resources__point_second"></div>
+                                        <div class="point-resources__point_last"></div>
+                                    </div>
+                                    <div class="point-resources__text">
+                                        Circulating Supply:
+                                        <br>1,000,000,000
+                                    </div>
+                                </div>
+                                <div class="point-resources pink">
+                                    <div class="point-resources__point">
+                                        <div class="point-resources__point_center"></div>
+                                        <div class="point-resources__point_second"></div>
+                                        <div class="point-resources__point_last"></div>
+                                    </div>
+                                    <div class="point-resources__text">
+                                        Maximum supply: <br>
+                                        1,000,000,000
+                                    </div>
+                                </div>
+                                <div class="point-resources red">
+                                    <div class="point-resources__point">
+                                        <div class="point-resources__point_center"></div>
+                                        <div class="point-resources__point_second"></div>
+                                        <div class="point-resources__point_last"></div>
+                                    </div>
+                                    <div class="point-resources__text">
+                                        Tax: 10%<br>
+                                        Marketing : 5%<br>
+                                        Development : 5%
+                                    </div>
+                                </div>
+                                <div class="point-resources green">
+                                    <div class="point-resources__point">
+                                        <div class="point-resources__point_center"></div>
+                                        <div class="point-resources__point_second"></div>
+                                        <div class="point-resources__point_last"></div>
+                                    </div>
+                                    <div class="point-resources__text">
+                                        Token symbol: <br>
+                                        $CMETA
+                                    </div>
+                                </div>
+                                <!-- <div class="bubl">
+                                    <div class="bubl__first"></div>
+                                    
+                                </div> -->
                             </div>
                         </div>
                     </div>
