our resources adapt

--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@
                 </div>
             </section>
             <section class="our-resources">
+                <div class="our-resources__blur"></div>
                 <div class="container">
                     <div class="our-resources__content">
                         <div class="our-resources__head">
@@ -334,6 +335,7 @@
                                 <button class="info__btn">Play (Coming Soon)</button>
                             </div>
                             <div class="points-resources">
+                                <div class="points-resources__blur"></div>
                                 <div class="point-resources purple">
                                     <div class="point-resources__point">
                                         <div class="point-resources__point_center"></div>
@@ -379,11 +381,17 @@
                                         $CMETA
                                     </div>
                                 </div>
-                                <!-- <div class="bubl">
-                                    <div class="bubl__first"></div>
-                                    
-                                </div> -->
+                                <div class="bubles">
+                                    <div class="bubl first"></div>
+                                    <div class="bubl second"></div>
+                                    <div class="bubl last"></div>
+                                </div>
                             </div>
+                        </div>
+                        <div class="our-resources__star">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 46 46" fill="none">
+                                <path d="M23 0L26.2527 19.7473L46 23L26.2527 26.2527L23 46L19.7473 26.2527L0 23L19.7473 19.7473L23 0Z" fill="white"/>
+                              </svg>
                         </div>
                     </div>
                 </div>
