--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
             </section>
             <section class="about-us" id="about-us">
                 <div class="about-us__img">
-                    <img src="img/about-us-bg.jpg">
+                    <picture>
+                        <source srcset="img/about-us-bg.webp" type="webp" />
+                        <img src="img/about-us-bg.jpg" alt="people">
+                    </picture>
                 </div>
                 <div class="about-us__bg"></div>
                 <div class="container">
@@ -252,7 +255,10 @@
                             <div class="card first">
                                 <div class="card__content">
                                     <div class="card__img">
-                                        <img src="img/brands-1.png" alt="">
+                                        <picture>
+                                            <source srcset="img/brands-1.webp" type="webp" />
+                                            <img src="img/brands-1.png" alt="brand-1">
+                                        </picture>
                                         <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46"
                                             viewBox="0 0 46 46" fill="none">
                                             <path
@@ -278,7 +284,10 @@
                             <div class="card second">
                                 <div class="card__content">
                                     <div class="card__img">
-                                        <img src="img/brands-2.png" alt="">
+                                        <picture>
+                                            <source srcset="img/brands-2.webp" type="webp" />
+                                            <img src="img/brands-2.png" alt="brand-2">
+                                        </picture>
                                     </div>
                                     <div class="card__info">
                                         <h4 class="card__name">Crafty Metaverse <br>Ecosystem</h4>
@@ -297,7 +306,10 @@
                             <div class="card third">
                                 <div class="card__content">
                                     <div class="card__img">
-                                        <img src="img/brands-3.png" alt="">
+                                        <picture>
+                                            <source srcset="img/brands-3.webp" type="webp" />
+                                            <img src="img/brands-3.png" alt="brand-3">
+                                        </picture>
                                     </div>
                                     <div class="card__info">
                                         <h4 class="card__name">SANKOFA</h4>
