fix scrol and btn

--- a/index.html
+++ b/index.html
@@ -336,15 +336,17 @@
                         </div>
                         <div class="our-resources__info">
                             <div class="info">
-                                <div class="info__logo">
-                                    <img src="img/logo-2.svg" alt="">
+                                <div class="info__content">
+                                    <div class="info__logo">
+                                        <img src="img/logo-2.svg" alt="">
+                                    </div>
+                                    <h4 class="info__title">About toKen $Cmeta</h4>
+                                    <p class="info__about">CMETA, a BSC-based cryptocurrency token will be the sole
+                                        governance token on
+                                        the platform. This means that every single transaction in the Crafty Metaverse space
+                                        will be conducted with the $CMETA token</p>
+                                    <button class="info__btn">Play (Coming Soon)</button>    
                                 </div>
-                                <h4 class="info__title">About toKen $Cmeta</h4>
-                                <p class="info__about">CMETA, a BSC-based cryptocurrency token will be the sole
-                                    governance token on
-                                    the platform. This means that every single transaction in the Crafty Metaverse space
-                                    will be conducted with the $CMETA token</p>
-                                <button class="info__btn">Play (Coming Soon)</button>
                             </div>
                             <div class="points-resources">
                                 <div class="points-resources__blur"></div>
